--- a/public_html/media/css/core.css
+++ b/public_html/media/css/core.css
@@ -92,9 +92,10 @@ img {
 	text-align: left;
 	margin: 0 auto;
 	position: relative;
-	min-width: 390px;
-	max-width: 728px;
-	padding: 0 2%;
+	left: 50%;
+	margin-left: -300px;
+	width: 600px;
+	padding: 0 1em;
 }
 
 /* small screens */
