Share links are opened in new tabs

--- a/src/Views/user-menu.phtml
+++ b/src/Views/user-menu.phtml
@@ -43,12 +43,12 @@
 	<p>Share:</p>
 	<ul>
 		<li>
-			<a data-tooltip="Share on Twitter" href="https://twitter.com/intent/tweet?url=<?php echo rawurlencode(UrlHelper::currentUrl()) ?>">
+			<a data-tooltip="Share on Twitter" target="_blank" href="https://twitter.com/intent/tweet?url=<?php echo rawurlencode(UrlHelper::currentUrl()) ?>">
 				<i class="icon-twitter"></i>
 			</a>
 		</li>
 		<li>
-			<a data-tooltip="Share on Facebook" href="http://www.facebook.com/sharer.php?u=<?php echo rawurlencode(UrlHelper::currentUrl()) ?>&amp;t=Share+MALgraph">
+			<a data-tooltip="Share on Facebook" target="_blank" href="http://www.facebook.com/sharer.php?u=<?php echo rawurlencode(UrlHelper::currentUrl()) ?>&amp;t=Share+MALgraph">
 				<i class="icon-facebook"></i>
 			</a>
 		</li>
