Improved tiny bits of outlook

--- a/public_html/media/css/user/ratings.css
+++ b/public_html/media/css/user/ratings.css
@@ -1,5 +1,5 @@
-.target { height: 17em; line-height: 0; }
+.target { height: 228px; line-height: 0; }
 .rating-length-dist .target { height: 20em; }
 
-ul.infobox { height: 17em; }
+ul.infobox { height: 250px; }
 ul.infobox .btn { margin-top: 1em; }
