--- a/src/Views/user-achievements.phtml
+++ b/src/Views/user-achievements.phtml
@@ -8,7 +8,7 @@
 			<p>No achievements yet! Better get to <?php echo $viewContext->media == Media::Manga ? 'reading' : 'watching' ?>.</p>
 		<?php else: ?>
 			<?php foreach ($viewContext->achievements as $ach): ?>
-				<div class="achi-entry">
+				<div class="achi-entry<?php if ($ach->hidden) echo ' hidden' ?>">
 					<?php if (!empty($ach->path)): ?>
 						<img class="achi<?php if (!empty($ach->entries)): ?> more-trigger<?php endif ?>" alt="<?php echo $ach->title ?>" src="<?php echo UrlHelper::absoluteUrl('/media/img/ach/' . $ach->path) ?>">
 					<?php endif ?>
@@ -70,4 +70,9 @@
 			<?php endforeach ?>
 		<?php endif ?>
 	</div>
+	<?php if ($viewContext->anyHidden): ?>
+		<div>
+			<p>You can also <a href="#" class="toggle-hidden">show</a> achievements from previously earned levels.</p>
+		</div>
+	<?php endif ?>
 </div>
