--- a/src/Views/user-ratings-length-dist.phtml
+++ b/src/Views/user-ratings-length-dist.phtml
@@ -18,9 +18,9 @@
 						<?php $scores = array_map(function($entries) { return RatingDistribution::fromEntries($entries)->getMeanScore(); }, $viewContext->lengthDistribution->getGroupsEntries()) ?>
 						<?php $key = array_search(max($scores), $scores) ?>
 						<?php if ($viewContext->media == Media::Anime): ?>
-							<?php list($num, $txt) = explode(' ', Retriever::getEpisodesText(str_replace('-', '&nbsp;to&nbsp;', $key))) ?>
+							<?php list($num, $txt) = explode(' ', TextHelper::getEpisodesText(str_replace('-', '&nbsp;to&nbsp;', $key))) ?>
 						<?php elseif ($viewContext->media == Media::Manga): ?>
-							<?php list($num, $txt) = explode(' ', Retriever::getChaptersText(str_replace('-', '&nbsp;to&nbsp;', $key))) ?>
+							<?php list($num, $txt) = explode(' ', TextHelper::getChaptersText(str_replace('-', '&nbsp;to&nbsp;', $key))) ?>
 						<?php endif ?>
 						<span class="prefix">Highest mean</span>
 						<span class="subject"><?php printf('%.2f', $scores[$key]) ?></span>
@@ -30,9 +30,9 @@
 				<li>
 					<div>
 						<?php if ($viewContext->media == Media::Anime): ?>
-							<?php list($num, $txt) = explode(' ', Retriever::getEpisodesText($key)) ?>
+							<?php list($num, $txt) = explode(' ', TextHelper::getEpisodesText($key)) ?>
 						<?php elseif ($viewContext->media == Media::Manga): ?>
-							<?php list($num, $txt) = explode(' ', Retriever::getChaptersText($key)) ?>
+							<?php list($num, $txt) = explode(' ', TextHelper::getChaptersText($key)) ?>
 						<?php endif ?>
 						<span class="prefix">Which is</span>
 						<span class="subject"><?php echo $num ?></span>
