--- a/src/Views/about.phtml
+++ b/src/Views/about.phtml
@@ -1,10 +1,10 @@
 <h1>About</h1>
 
-<p>MALgraph is an extension of your MyAnimeList profile, serving you various information about your data&nbsp;&ndash;&nbsp;scores distribution, favorite studios, personalized suggestions and a lot more.</p>
+<p>MALgraph is an extension of your MyAnimeList profile, serving you various information about your data&nbsp;&ndash;&nbsp;rating distribution, favorite studios, personalized suggestions, activity history, and a lot more.</p>
 
-<p>It started as a basic, minimalistic page with black bars, and quickly evolved to a full-fledged MAL data parser. At some point it had too much information to be shown in a single cluster, so we decided to split it into tabs.</p>
+<p>Speaking of history, MALgraph started as a basic, minimalistic page with black bars (<a target="_blank" href="<?php echo UrlHelper::absoluteUrl('/media/img/history1.png') ?>">version one</a>), and quickly evolved to a full-fledged MAL data parser, a bit richer in colors&nbsp;&ndash;&nbsp;<a target="_blank" href="<?php echo UrlHelper::absoluteUrl('/media/img/history2.png') ?>">version two</a>. At some point we realized it had too much information to be shown in a single cluster, so we decided to split it into tabs, thus creating Mg3.</p>
 
-<p>History in images: gloomy <a target="_blank" href="<?php echo UrlHelper::absoluteUrl('/media/img/history1.png') ?>">version 1</a>, rich in colors <a target="_blank" href="<?php echo UrlHelper::absoluteUrl('/media/img/history2.png') ?>">version 2</a>. A quick calculation reveals that you&rsquo;re reading version 3 now. Or Mg3, as we call it.</p>
+<p>Continuing the tradition of writing 95% of the code from scratch, Mg4 has been born, with cleaner interface free from clutter and new features suggested by users in <a target="_blank" href="http://myanimelist.net/clubs.php?cid=30017">our&nbsp;club</a>. Even if there aren&rsquo;t many changes visible in the outer layer, the cogs have been replaced and thoroughly oiled, and a new queuing system has been put to work.</p>
 
 <p>MALgraph uses the following:</p>
 
