--- a/src/Views/user-entries-genre.phtml
+++ b/src/Views/user-entries-genre.phtml
@@ -1,6 +1,6 @@
 <p>
 	<a class="close"><i class="icon-close"></i></a>
-	<?php echo ucfirst(Media::toString($viewContext->media)) ?> from <?php echo $viewContext->genreName ?> genre
+	<?php echo ucfirst(Media::toString($viewContext->media)) ?> from &bdquo;<?php echo $viewContext->genreName ?>&rdquo; genre:
 
 	<?php if (!empty($viewContext->entries)): ?>
 		&nbsp;(<?php echo count($viewContext->entries) ?>
