--- a/src/Views/user-ratings-length-dist.phtml
+++ b/src/Views/user-ratings-length-dist.phtml
@@ -1,10 +1,5 @@
 <div class="section rating-length-dist">
 	<h2>
-		<?php if ($viewContext->media == Media::Anime): ?>
-			<i data-tooltip="Do you prefer longer or shorter|series? (Movies are not counted.)" class="icon-tooltip"></i>
-		<?php else: ?>
-			<i data-tooltip="Do you prefer longer|or shorter series?" class="icon-tooltip"></i>
-		<?php endif ?>
 		Ratings vs. <?php echo $viewContext->media == Media::Anime ? 'episode' : 'chapter' ?> count
 	</h2>
 	<div class="section-body">
@@ -62,7 +57,13 @@
 						if (this.x == '?') {
 							text = 'Mean score for titles of unknown length: ';
 						} else {
-							text = 'Mean score for titles of length ' + this.x + ': ';
+							text = 'Mean score for titles of length ' + this.x;
+							<?php if ($viewContext->media == Media::Anime): ?>
+								if (this.x == '1') {
+									text += ' (w/o movies)';
+								}
+							<?php endif ?>
+							text += ': ';
 						}
 						if (this.y > 0) {
 							text += this.y.toFixed(2);
