--- a/public_html/media/css/user/suggestions.css
+++ b/public_html/media/css/user/suggestions.css
@@ -7,7 +7,7 @@
 }
 
 .missing table tbody tr:first-child td {
-	padding: 0.5em 1em;
+	padding: 0.5em 0.5em;
 	box-shadow: inset 0 1em 1em -1em #ddd;
 	vertical-align: top;
 }
@@ -30,6 +30,8 @@
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	overflow: hidden;
+	padding-right: 20px;
+	position: relative;
 }
 
 .missing .more {
@@ -37,6 +39,11 @@
 	text-align: center;
 	color: silver;
 }
-.missing i {
+.missing i.left {
 	margin-right: 4px;
+}
+
+.missing i.right {
+	position: absolute;
+	right: 4px;
 }
