Expanded genres header links to MAL genre search

--- a/src/Views/user-entries-genre.phtml
+++ b/src/Views/user-entries-genre.phtml
@@ -1,6 +1,10 @@
 <p>
 	<a class="close"><i class="icon-close"></i></a>
-	<?php echo ucfirst(Media::toString($viewContext->media)) ?> from &bdquo;<?php echo $viewContext->genreName ?>&rdquo; genre:
+	<?php echo ucfirst(Media::toString($viewContext->media)) ?> from &bdquo;
+		<a href="http://myanimelist.net/<?php echo Media::toString($viewContext->media) ?>.php?genre%5b%5d=<?php echo $viewContext->filterParam ?>">
+			<?php echo $viewContext->genreName ?>
+		</a>
+	&rdquo; genre:
 
 	<?php if (!empty($viewContext->entries)): ?>
 		&nbsp;(<?php echo count($viewContext->entries) ?>
