--- a/src/Views/user-suggestions-missing.phtml
+++ b/src/Views/user-suggestions-missing.phtml
@@ -41,7 +41,7 @@
 							<td class="proposed">
 								<ul>
 									<?php foreach ($franchise->allEntries as $entry): ?>
-										<li id="mis-<?php echo base64_encode($viewContext->user->name) . $entry->media . $entry->mal_id ?>">
+										<li id="<?php printf('mis-%s-%s%d', strtolower($viewContext->user->name), $entry->media, $entry->mal_id) ?>">
 											<a href="#" class="delete">
 												<i data-tooltip="Hide this suggestion" class="right icon-small-close"></i>
 											</a>
