--- a/src/Views/user-entries-genre.phtml
+++ b/src/Views/user-entries-genre.phtml
@@ -1,7 +1,7 @@
 <p>
 	<a class="close"><i class="icon-close"></i></a>
 	<?php echo ucfirst(Media::toString($viewContext->media)) ?> from &bdquo;
-		<a href="http://myanimelist.net/<?php echo Media::toString($viewContext->media) ?>.php?genre%5b%5d=<?php echo $viewContext->filterParam ?>">
+		<a target="_blank" href="http://myanimelist.net/<?php echo Media::toString($viewContext->media) ?>.php?genre%5b%5d=<?php echo $viewContext->filterParam ?>">
 			<?php echo $viewContext->genreName ?>
 		</a>
 	&rdquo; genre:
