--- a/src/Views/user-entries-creator.phtml
+++ b/src/Views/user-entries-creator.phtml
@@ -30,7 +30,7 @@
 		<?php foreach ($viewContext->entries as $entry): ?>
 			<li>
 				<a target="_blank" href="<?php echo $entry->mal_link ?>">
-					<?php echo $entry->title ?>
+					<?php echo htmlspecialchars($entry->title) ?>
 				</a>
 				<span class="details">&nbsp;(<?php echo $entry->score ? 'rated with ' . $entry->score : 'unrated' ?>)</span>
 			</li>
