--- a/src/Views/user-entries-ratings.phtml
+++ b/src/Views/user-entries-ratings.phtml
@@ -24,7 +24,7 @@
 		<?php foreach ($viewContext->entries as $entry): ?>
 			<li>
 				<a target="_blank" href="<?php echo $entry->mal_link ?>">
-					<?php echo $entry->title ?>
+					<?php echo htmlspecialchars($entry->title) ?>
 				</a>
 				<span class="details">&nbsp;(<?php echo $entry->completed_duration ?> min.)</span>
 			</li>
