--- a/src/Views/user-entries-mismatches.phtml
+++ b/src/Views/user-entries-mismatches.phtml
@@ -20,7 +20,7 @@
 		<?php foreach ($viewContext->entries as $entry): ?>
 			<li>
 				<a target="_blank" href="<?php echo $entry->mal_link ?>">
-					<?php echo $entry->title ?>
+					<?php echo htmlspecialchars($entry->title) ?>
 				</a>
 				<span class="details">&nbsp;
 					(<?php if ($entry->media == Media::Anime): ?>
