--- a/public_html/media/css/user/ratings.css
+++ b/public_html/media/css/user/ratings.css
@@ -1,5 +1,123 @@
-.target { height: 228px; line-height: 0; }
-.rating-length-dist .target { height: 20em; }
+.target {
+	height: 228px;
+	line-height: 0;
+}
+.rating-length-dist .target {
+	height: 20em;
+}
 
-ul.infobox { height: 250px; }
-ul.infobox .btn { margin-top: 1em; }
+ul.infobox {
+	height: 250px;
+}
+ul.infobox .btn {
+	margin-top: 1em;
+}
+
+.popup-wrapper {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.3);
+	z-index: 5;
+	text-align: center;
+}
+.popup {
+	background: white;
+	margin: 10% auto auto auto;
+	display: inline-block;
+	text-align: left;
+	box-shadow: 0 0 1em rgba(0, 0, 0, 0.5);
+	border-radius: 2px;
+	padding: 1em;
+}
+.popup .icon-close {
+	cursor: pointer;
+	float: right;
+	padding: 0.5em 0 0.5em 0.5em;
+}
+
+.export .title {
+	font-size: 1.1em;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+	margin-bottom: 1em;
+}
+.export .header {
+	display: inline-block;
+	margin: 0 auto;
+}
+.export .header p {
+	float: left;
+	margin: 0 1em 0 0;
+}
+.export .header {
+	line-height: 2em;
+	vertical-align: middle;
+}
+.export .header select {
+	float: left;
+	margin: 0 1em 0 0;
+	width: auto;
+	max-width: 40%;
+}
+.export select[name='type'] {
+	max-width: 25%;
+	width: auto;
+}
+.export select[name='theme'] {
+	margin-right: 0;
+}
+.export button {
+	margin: 0;
+	float: left;
+}
+.export textarea {
+	margin: 1em 0 0 0;
+	width: 100%;
+	height: 7em;
+	cursor: text !important;
+	/* fix right padding problem */
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+.export .body {
+	text-align: center;
+}
+.export .body p {
+	margin-top: 0;
+}
+.export .preview p {
+	margin-top: 1em;
+}
+.export .preview img {
+	max-width: 100%;
+	max-height: 161px;
+}
+
+.export .body-wrapper {
+	float: left;
+	width: 33em;
+	padding-right: 1em;
+	border-right: 1px solid rgba(0, 0, 0, 0.1);
+	margin-right: -1em;
+}
+.export .custom-theme {
+	float: right;
+	display: none;
+	margin-left: 2em;
+}
+.export .custom-theme p {
+	text-align: left;
+	overflow: hidden;
+	white-space: pre;
+}
+.export .custom-theme .color-picker {
+	text-align: center;
+}
+.export .custom-theme .farbtastic {
+	margin: 0 auto;
+}
