--- a/src/Views/user-ratings-dist.phtml
+++ b/src/Views/user-ratings-dist.phtml
@@ -26,6 +26,11 @@
 						<span class="subject"><?php printf('%.02f', $viewContext->ratingDistribution->getStandardDeviation()) ?></span>
 					</div>
 				</li>
+				<li>
+					<div>
+						<a class="btn export-trigger" href="#">Export</a>
+					</div>
+				</li>
 			</ul>
 
 			<div class="target-wrapper">
@@ -36,10 +41,65 @@
 			<div class="entries-wrapper">
 			</div>
 
+			<div class="popup-wrapper">
+				<div class="export popup">
+					<div class="title">
+						<a class="close"><i class="icon-close"></i></a>
+						<p>Export your rating distribution</p>
+					</div>
+					<div class="body">
+						<div class="custom-theme">
+							<p><br>Choose element to edit:</p>
+							<form>
+								<?php $options = [
+									'bar1' => 'Bar gradient - left',
+									'bar2' => 'Bar gradient - right',
+									'line1' => 'Line gradient - left',
+									'line2' => 'Line gradient - right',
+									'back' => 'Background',
+									'font1' => 'Text I - numbers',
+									'font2' => 'Text II - labels and %',
+									'title' => 'Title and icon',
+								]; ?>
+								<select class="color" name="color">
+									<?php foreach ($options as $key => $text): ?>
+										<option value="<?php echo $key ?>"><?php echo $text ?></option>
+									<?php endforeach ?>
+								</select>
+								<div class="colorpicker"></div>
+							</form>
+						</div>
+						<div class="body-wrapper">
+							<p>You can export your rating distribution as an image, which updates automatically every 24 h. How about putting it on <a target="_blank" href="http://myanimelist.net/editprofile.php">your MAL profile</a>?</p>
+							<div class="header">
+								<p>Layout:</p>
+								<select class="type" name="type"></select>
+								<p>Theme:</p>
+								<select class="theme" name="theme"></select>
+								<div class="clear"></div>
+							</div>
+							<textarea readonly="readonly" name="bbcode"><?php
+								?>[center]<?php
+								?>[url=<?php echo UserControllerProfileModule::url($viewContext->user->name, $viewContext->media) ?>]<?php
+								?>[img]<?php echo UserControllerExportModule::url($viewContext->user->name, $viewContext->media) ?>?type=1<?php
+								?>[/img]<?php
+								?>[/url]<?php
+								?>[/center]<?php
+							?></textarea>
+							<div class="preview">
+								<p>Preview (may be scaled):</p>
+								<img alt="Preview" src="<?php echo UrlHelper::absoluteUrl('/media/img/pixel.gif') ?>">
+							</div>
+						</div>
+						<div class="clear"></div>
+					</div>
+				</div>
+			</div>
+
 			<script type="text/javascript">
 				var chart = new Highcharts.Chart({
 					chart: { renderTo: $('.rating-dist .target')[0], type: 'bar', marginRight: 35 },
-					xAxis: { categories: <?php echo json_encode(array_map(function($x) { return $x == 0 ? '-' : $x; }, $viewContext->ratingDistribution->getGroupsKeys())) ?>, title: { text: 'Rating' } },
+					xAxis: { categories: <?php echo json_encode(array_map(function($x) { return $x == 0 ? '-' : $x; }, array_values($viewContext->ratingDistribution->getGroupsKeys()))) ?>, title: { text: 'Rating' } },
 					yAxis: { title: { text: 'Count', margin: 15 } },
 					tooltip: { formatter: function() {
 						var text;
