--- a/public_html/media/css/user/ratings.css
+++ b/public_html/media/css/user/ratings.css
@@ -23,6 +23,7 @@ ul.infobox .btn {
 	background: rgba(0, 0, 0, 0.3);
 	z-index: 5;
 	text-align: center;
+	font-size: 0.9em;
 }
 .popup {
 	background: white;
