Export: icon color can be controlled separately

--- a/src/Views/user-ratings-dist.phtml
+++ b/src/Views/user-ratings-dist.phtml
@@ -59,7 +59,8 @@
 									'back' => 'Background',
 									'font1' => 'Text I - numbers',
 									'font2' => 'Text II - labels and %',
-									'title' => 'Title and icon',
+									'title' => 'Title',
+									'logo' => 'Icon',
 								]; ?>
 								<select class="color" name="color">
 									<?php foreach ($options as $key => $text): ?>
